fix problem with facebook status not persisting between pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,28 @@
     <%= csrf_meta_tags %>
 
   <body>
+
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '<%= ENV["FACEBOOK_APP_ID"] %>',
+          cookie     : true,
+          xfbml      : true,
+          version    : 'v2.6',
+          status    : true
+        });
+      };
+
+        // Insert the Facebook JS sdk into the page headers
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = '//connect.facebook.net/en_US/sdk.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
 <%= redux_store('RGBlog',
                     { comments: @article ? comments_list_json(@article.comments) : false,
                              user: user_json(current_user) || false,
